[package]
name = "frontmatter-fixer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6"
mlua = { version = "0.8", features = ["lua54", "serialize"] }
serde_yaml = { version = "0.9" }
yaml-front-matter = "0.1"
